--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        buildConfigField("String", "GITHUB_TOKEN", '"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"')
+        buildConfigField("String", "GITHUB_TOKEN", '"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"')
     }
 
     buildFeatures {
@@ -44,7 +44,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
     implementation "androidx.recyclerview:recyclerview:1.2.1"
-    implementation "com.github.bumptech.glide:glide:4.12.0"
+    implementation 'com.github.bumptech.glide:glide:4.13.1'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation "androidx.fragment:fragment-ktx:1.4.1"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
