--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GithubSearchUsers">
         <activity
-            android:name=".ui.splash.SplashActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.SplashActivity"
-            android:exported="false" />
-        <activity
             android:name=".ui.detail.DetailUserActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.favorite.FavouriteActivity"
+            android:name=".ui.favourite.FavouriteActivity"
             android:exported="false" />
         <activity
             android:name=".ui.setting.SettingActivity"
